--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ ConfigArgParse==0.15.1
 defusedxml==0.6.0
 diff-match-patch==20181111
 Django==3.0
+django-admin-interface==0.12.0
 django-admin-rangefilter==0.5.3
+django-colorfield==0.1.15
 django-environ==0.4.4
 django-filter==1.0.4
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
 django-grappelli==2.13.2
 django-import-export==2.0.1
 django-suit==2.0a1
